[workspace]

resolver = "2"

members = [
    "comgr",
    "cuda_macros",
    "cuda_types",
    "dark_api",
    "detours-sys",
    "ext/amd_comgr-sys",
    "ext/hip_runtime-sys",
    "ext/rocblas-sys",
    "format",
    "ptx",
    "ptx_parser",
    "ptx_parser_macros",
    "ptx_parser_macros_impl",
    "ptxas",
    "xtask",
    "zluda",
    "zluda_bindgen",
    "zluda_blas",
    "zluda_blaslt",
    "zluda_cache",
    "zluda_common",
    "zluda_dnn",
    "zluda_trace",
    "zluda_trace_blas",
    "zluda_trace_blaslt",
    "zluda_trace_common",
    "zluda_trace_dnn",
    "zluda_trace_fft",
    "zluda_trace_nvml",
    "zluda_trace_sparse",
    "zluda_fft",
    "zluda_inject",
    "zluda_ld",
    "zluda_ml",
    "zluda_replay",
    "zluda_redirect",
    "zluda_sparse",
    "compiler",
]

default-members = ["zluda", "zluda_ml", "zluda_inject", "zluda_redirect", "compiler"]

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = true

[profile.dev.package.xtask]
opt-level = 2