[workspace]

resolver = "2"

members = [
    "cuda_macros",
    "cuda_types",
    "dark_api",
    "detours-sys",
    "ext/highs-sys",
    "ext/hip_runtime-sys",
    "ext/hipblaslt-sys",
    "ext/miopen-sys",
    "ext/rocblas-sys",
    "format",
    "ptx",
    "ptx_parser",
    "ptx_parser_macros",
    "ptx_parser_macros_impl",
    "ptxas",
    "xtask",
    "zluda",
    "zluda_bindgen",
    "zluda_blas",
    "zluda_blaslt",
    "zluda_cache",
    "zluda_common",
    "zluda_dnn",
    "zluda_dnn8",
    "zluda_dnn9",
    "zluda_trace",
    "zluda_trace_blas",
    "zluda_trace_blaslt",
    "zluda_trace_common",
    "zluda_trace_dnn8",
    "zluda_trace_dnn9",
    "zluda_trace_fft",
    "zluda_trace_nvml",
    "zluda_trace_sparse",
    "zluda_fft",
    "zluda_inject",
    "zluda_ld",
    "zluda_ml",
    "zluda_precompile",
    "zluda_redirect",
    "zluda_sparse",
    "compiler",
]

default-members = ["zluda", "zluda_ml", "zluda_inject", "zluda_redirect", "compiler"]

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = true

# By default (even in dev) we build LLVM in Release (opt-level is controlled 
# by cmake). That's because LLVM in Debug is excruciatingly slow and makes any
# kind of debugging impossible. This profile is a special configuration for when
# you want to build LLVM in Debug
[profile.dev-llvm]
inherits = "dev"

[profile.dev-llvm.package.xtask]
opt-level = 2

[profile.dev.package.xtask]
opt-level = 2

[patch.crates-io]
highs-sys = { path = "ext/highs-sys" }
