[package]
name = "compiler"
description = "ZLUDA offline compiler"
version = "0.0.0"
authors = ["Joëlle van Essen <joelle@v-essen.nl>"]
edition = "2021"

[[bin]]
name = "zoc"
path = "src/main.rs"

[dependencies]
bpaf = { version = "0.9.19", features = ["derive"] }
llvm_zluda = { path = "../llvm_zluda" }
ptx = { path = "../ptx" }
ptx_parser = { path = "../ptx_parser" }
libloading = "0.8"
thiserror = "2.0.12"

[package.metadata.zluda]
debug_only = true
