[package]
name = "cuda_tests"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2021"

[dependencies]
cuda_types = { path = "../cuda_types" }
cuda_macros = { path = "../cuda_macros" }
lazy_static = "1.4"
num_enum = "0.4"
lz4-sys = "1.9"
tempfile = "3"
paste = "1.0"
rustc-hash = "1.1"
dtor = "0.0.6"
