[package]
name = "llvm_zluda"
version = "0.1.0"
edition = "2021"
# Used for the metadata environment variables (ie, DEP_LLVM_ROOT is set)
links = "LLVM"

[lib]
crate-type = ["dylib"]

[dependencies]
tempfile = "3"

[dependencies.llvm-sys]
version = "191"
features = [ "disable-alltargets-init", "no-llvm-linking" ]

[build-dependencies]
cmake = "0.1"
cc = "1.0.69"
