[package]
name = "notcuda"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2018"

[[bin]]
name = "notcuda"
path = "src/bin.rs"

[dependencies]
detours-sys = "0.1"
clap = "2.33"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "std", "synchapi"] }