[package]
name = "notcuda_inject"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2018"

[[bin]]
name = "notcuda"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
notcuda_redirect = { path = "../notcuda_redirect" }
winapi = { version = "0.3", features = ["processthreadsapi", "std", "synchapi"] }
detours-sys = "0.1"
clap = "2.33"
guid = "0.1"