[package]
name = "notcuda_redirect"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
detours-sys = "0.1"
wchar = "0.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winbase", "winnt", "winerror", "libloaderapi", "std"] }