[package]
name = "nvapi"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2021"

[lib]
name = "nvapi64"
crate-type = ["cdylib"]

[dependencies]
format = { path = "../format" }
dark_api = { path = "../dark_api" }
cuda_macros = { path = "../cuda_macros" }
cuda_types = { path = "../cuda_types" }
zluda_trace_common = { path = "../zluda_trace_common" }
libloading = "0.8"
paste = "1.0"
unwrap_or = "1.0.1"
cglue = "0.3.5"
rustc-hash = "2.0.0"

[package.metadata.zluda]
windows_only = true
windows32_paths = ["nvapi.dll"]
32bit = true
