[package]
name = "ptx"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2018"

[lib]

[dependencies]
ptx_parser = { path = "../ptx_parser" }
llvm_zluda = { path = "../llvm_zluda" }
regex = "1"
rspirv = "0.7"
spirv_headers = "1.5" 
quick-error = "1.2"
thiserror = "1.0"
bit-vec = "0.6"
half ="1.6"
bitflags = "1.2"

[dependencies.lalrpop-util]
version = "0.19.12"
features = ["lexer"]

[build-dependencies.lalrpop]
version = "0.19.12"
features = ["lexer"]

[dev-dependencies]
hip_runtime-sys = { path = "../hip_runtime-sys" }
amd_comgr-sys = { path = "../amd_comgr-sys" }
spirv_tools-sys = { path = "../spirv_tools-sys" }
tempfile = "3"
paste = "1.0"
cuda-driver-sys = "0.3.0"
