[package]
name = "ptx"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2021"

[lib]

[dependencies]
ptx_parser = { path = "../ptx_parser" }
llvm_zluda = { path = "../llvm_zluda" }
quick-error = "1.2"
thiserror = "1.0"
bit-vec = "0.6"
half ="1.6"
bitflags = "1.2"
rustc-hash = "2.0.0"
strum = "0.26"
strum_macros = "0.26"

[dev-dependencies]
hip_runtime-sys = { path = "../ext/hip_runtime-sys" }
comgr = { path = "../comgr" }
tempfile = "3"
paste = "1.0"
cuda-driver-sys = "0.3.0"
pretty_assertions = "1.4.1"