[package]
name = "ptx"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2021"

[lib]

[dependencies]
ptx_parser = { path = "../ptx_parser" }
llvm_zluda = { path = "../llvm_zluda" }
quick-error = "1.2"
thiserror = "1.0"
bit-vec = "0.8"
half ="1.6"
bitflags = "1.2"
rustc-hash = "2.0.0"
strum = "0.26"
strum_macros = "0.26"
petgraph = "0.7.1"
highs = "1.12.0"
int-enum = "1.1"
unwrap_or = "1.0.1"
smallvec = "1.15.1"

[dev-dependencies]
hip_runtime-sys = { path = "../ext/hip_runtime-sys" }
comgr = { path = "../comgr" }
cuda_types = { path = "../cuda_types" }
cuda_macros = { path = "../cuda_macros" }
tempfile = "3"
paste = "1.0"
pretty_assertions = "1.4.1"
libloading = "0.8"

[features]
ci_build = []
