[package]
name = "ptx_parser_macros"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
ptx_parser_macros_impl = { path = "../ptx_parser_macros_impl" }
convert_case = "0.6.0"
rustc-hash = "2.0.0"
syn = "2.0.67"
quote = "1.0"
proc-macro2 = "1.0.86"
either = "1.13.0"
