[package]
name = "ptxas"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2021"

[[bin]]
name = "ptxas"
path = "src/main.rs"

[dependencies]
comgr = { path = "../comgr" }
ptx = { path = "../ptx" }
ptx_parser = { path = "../ptx_parser" }
hip_runtime-sys = { path = "../ext/hip_runtime-sys" }
bpaf = { version = "0.9.19", features = ["derive"] }

[package.metadata.zluda]
