[package]
name = "xtask"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2018"

[dependencies]
argh = "0.1"
# v18 requires rust 1.70 or higher
cargo_metadata = "=0.17.0"
# cargo-platform is a cargo_metadata, version 0.1.6 requires rust 1.70 or higher
cargo-platform = "=0.1.5"
serde = "1.0.193"
serde_json = "1.0.108"
time = { version = "=0.3.23", features = ["local-offset"] }

[target.'cfg(windows)'.dependencies]
zip = { version = "0.6.6", features = ["deflate", "time"], default-features = false }

[target.'cfg(unix)'.dependencies]
flate2 = { version = "1.0.28", features = ["cloudflare_zlib"], default-features = false }
tar = "0.4"