[package]
name = "xtask"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2021"

[dependencies]
bpaf = { version = "0.9.15", features = ["derive"] }
cargo_metadata = "0.19.1"
serde = "1.0.217"
serde_json = "1.0.137"

[target.'cfg(unix)'.dependencies]
flate2 = { version = "1.1.1", features = ["zlib-rs"], default-features = false }
tar = "0.4.44"

[target.'cfg(windows)'.dependencies]
zip = { version = "4.2.0", features = ["deflate", "time"], default-features = false }
time = "0.3.41"
