[package]
name = "zluda32"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2021"

[lib]
name = "nvcuda"
crate-type = ["cdylib"]

[dependencies]
cuda_types = { path = "../cuda_types" }
zluda_common = { path = "../zluda_common" }
cuda_macros = { path = "../cuda_macros" }
zluda_windows = { path = "../zluda_windows" }
zluda_server_common = { path = "../zluda_server_common" }
dark_api = { path = "../dark_api" }
paste = "1.0"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_Security",
] }
rand = "0.10"
rkyv = "0.8"
unwrap_or = "1.0.1"
rustc-hash = "2.0.0"
libc = "0.2"

[package.metadata.zluda]
windows_only = true
64bit = false
32bit = true
