[package]
name = "zluda_bindgen"
version = "0.1.0"
edition = "2021"

[dependencies]
bindgen = "0.70"
syn = { version = "2.0", features = ["full", "visit-mut"] }
proc-macro2 = "1.0.89"
quote = "1.0"
prettyplease = "0.2.25"
rustc-hash = "2.0.0"
libloading = "0.8"
cuda_types = { path = "../cuda_types" }
