[package]
name = "zluda_blas"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "cublas"

[dependencies]
cuda_macros = { path = "../cuda_macros" }
cuda_types = { path = "../cuda_types" }
zluda_common = { path = "../zluda_common" }
rocblas-sys = { path = "../ext/rocblas-sys" }
hipblaslt-sys = { path = "../ext/hipblaslt-sys" }
hip_runtime-sys = { path = "../ext/hip_runtime-sys" }

[target.'cfg(windows)'.dependencies]
zluda_windows = { path = "../zluda_windows" }

[package.metadata.zluda]
linux_symlinks = ["libcublas.so.12", "libcublas.so.13"]
windows_paths = ["cublas64_12.dll", "cublas64_13.dll"]
