[package]
name = "zluda_blaslt"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "cublaslt"

[dependencies]
cuda_base = { path = "../cuda_base" }
cuda_types = { path = "../cuda_types" }

[package.metadata.zluda]
linux_symlinks = [
    "libcublasLt.so",
    "libcublasLt.so.12",
]
