[package]
name = "zluda_blaslt"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "cublaslt"

[dependencies]
cuda_macros = { path = "../cuda_macros" }
cuda_types = { path = "../cuda_types" }
hip_runtime-sys = { path = "../ext/hip_runtime-sys" }
hipblaslt-sys = { path = "../ext/hipblaslt-sys" }
zluda_common = { path = "../zluda_common" }

[package.metadata.zluda]
linux_symlinks = [
    "libcublasLt.so",
    "libcublasLt.so.12",
    "libcublasLt.so.13",
]
