[package]
name = "zluda_blaslt"
version = "0.0.0"
edition = "2021"

[lib]
# we include rlib so that this can be used from zluda_blas tests
crate-type = ["cdylib", "rlib"]
name = "cublaslt"

[dependencies]
cuda_macros = { path = "../cuda_macros" }
cuda_types = { path = "../cuda_types" }
hip_runtime-sys = { path = "../ext/hip_runtime-sys" }
hipblaslt-sys = { path = "../ext/hipblaslt-sys" }
zluda_common = { path = "../zluda_common" }

[dev-dependencies]
libloading = "0.8"
paste = "1.0"

[package.metadata.zluda]
linux_symlinks = ["libcublasLt.so", "libcublasLt.so.12", "libcublasLt.so.13"]
windows_paths = ["cublasLt64_12.dll", "cublasLt64_13.dll"]

[target.'cfg(windows)'.dependencies]
zluda_windows = { path = "../zluda_windows" }
